--- a/src/TextScaler/styles.module.css
+++ b/src/TextScaler/styles.module.css
@@ -15,7 +15,7 @@
   justify-content: center;
   width: 40px;
   height: 40px;
-  border-radius: 8px;
+  user-select: none;
 }
 
 .t:hover {
@@ -27,12 +27,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: -20px;
 }
 
 .visible {
   transition-duration: 0.2s;
-  transform: scale(1) translateY(-20px);
+  transform: scale(1);
 }
 
 .hidden {
