--- a/src/TextScaler/styles.module.css
+++ b/src/TextScaler/styles.module.css
@@ -13,8 +13,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40px;
-  height: 40px;
   user-select: none;
 }
 
@@ -30,11 +28,11 @@
 }
 
 .visible {
+  opacity: 1;
   transition-duration: 0.2s;
-  transform: scale(1);
 }
 
 .hidden {
+  opacity: 0;
   transition-duration: 0.2s;
-  transform: scale(0);
 }
