--- a/src/TextScaler/styles.module.css
+++ b/src/TextScaler/styles.module.css
@@ -2,10 +2,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 64px;
+  height: 5px;
   border-radius: 2px;
 }
 
 .sliderHandle {
+  width: 14px;
+  height: 14px;
   border-radius: 50%;
 }
 
