--- a/src/TextScaler/styles.module.css
+++ b/src/TextScaler/styles.module.css
@@ -10,17 +10,23 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 14px;
 }
 
 .counter {
   position: absolute;
   margin-top: -36px;
   margin-left: -2px;
+  font-size: 14px;
   white-space: nowrap;
 }
 
 .px {
   font-size: 10px;
+}
+
+.sizeSmallT {
+  font-size: 14px;
 }
 
 .sizeBigT {
